// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxDropdownDivider customize 1`] = `
<div>
  <hr
    class="dropdown-divider bazinga"
  />
</div>
`;

exports[`loads and displays CxDropdownDivider component 1`] = `
<div>
  <hr
    class="dropdown-divider"
  />
</div>
`;
